--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
 apply plugin: 'org.jetbrains.kotlin.jvm'
 
 sourceCompatibility = '1.8'
@@ -32,7 +33,8 @@ dependencies {
     //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
     testCompile group: 'junit', name: 'junit', version: '4.10'
     compile fileTree(dir: 'lib', include: ['*.jar'])
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
 }
 
 jar {
@@ -45,7 +47,7 @@ jar {
     }
 }
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+    ext.kotlin_version = '1.3.21'
     repositories {
         mavenCentral()
     }
